--- a/assignment_2/assignment2.html
+++ b/assignment_2/assignment2.html
@@ -180,5 +180,7 @@
                     <a href= "https://instagram.com">Instagram</a>
                 </p>
             </footer>
+    </body>
+</html>
 
 
